--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
    margin:4px 2px;
    cursor: pointer;
 }
+.fb_customer_chat_bubble_pop_in{top:20px!important}
 
 @media only screen and(max-width: 750px) {
     .background {
